packages/core/src/editor/Block.css
/* ... */
/* Unordered */
.bn-block-content[data-content-type="bulletListItem"]::before {
  display: flex;
  justify-content: center;
  min-width: 24px;
  padding-right: 4px;
}

/* Checked */
.bn-block-content[data-content-type="checkListItem"] > input {
  cursor: pointer;
  height: 24px;
  margin-left: 4px;
  margin-right: 8px;
  margin-top: 0;
  width: 12px;
}

.bn-block-content[data-content-type="checkListItem"][data-checked="true"]
  .bn-inline-content {
  text-decoration: line-through;
}

.bn-block-content[data-text-alignment="center"] {
  justify-content: center;
}

.bn-block-content[data-text-alignment="right"] {
  justify-content: flex-end;
}

/* Toggle */
.bn-block:has(
    > .bn-block-content > div > .bn-toggle-wrapper[data-show-children="false"]
  )
  > .bn-block-group,
.bn-block:has(
    > .react-renderer
      > .bn-block-content
      > div
      > .bn-toggle-wrapper[data-show-children="false"]
  )
  > .bn-block-group {
  display: none;
}

.bn-toggle-wrapper {
  display: flex;
  align-items: center;
}

.bn-toggle-button {
  color: var(--bn-colors-editor-text);
  padding: 3px;
}

.bn-toggle-button > svg {
  width: 18px;
  height: 18px;
}

.bn-toggle-wrapper[data-show-children="true"] .bn-toggle-button {
  transform: rotate(90deg);
}

.bn-toggle-add-block-button {
  font-size: 16px;
  color: var(--bn-colors-side-menu);
  font-weight: normal;
  margin-left: 22px;
  padding-inline: 2px;
  width: fit-content;
}

.bn-toggle-button,
.bn-toggle-add-block-button {
  background: none;
  border: none;
  border-radius: var(--bn-border-radius-small);
  cursor: pointer;
  display: flex;
  user-select: none;
}

.bn-toggle-button:hover,
.bn-toggle-add-block-button:hover {
  background-color: var(--bn-colors-hovered-background);
}

/* No list nesting */
.bn-block-outer[data-prev-type="bulletListItem"]
  > .bn-block
  > .bn-block-content::before {
  content: "•";
}

.bn-block-outer:not([data-prev-type])
  > .bn-block
  > .bn-block-content[data-content-type="bulletListItem"]::before,
.bn-block-outer:not([data-prev-type])
  > .bn-block
  > div[data-type="modification"]
  > .bn-block-content[data-content-type="bulletListItem"]::before {
  content: "•";
}

/* 1 level of list nesting */
[data-content-type="bulletListItem"]
  ~ .bn-block-group
  > .bn-block-outer[data-prev-type="bulletListItem"]
  > .bn-block
  > .bn-block-content::before {
  content: "◦";
}

[data-content-type="bulletListItem"]
  ~ .bn-block-group
  > .bn-block-outer:not([data-prev-type])
  > .bn-block
  > .bn-block-content[data-content-type="bulletListItem"]::before,
[data-content-type="bulletListItem"]
  ~ .bn-block-group
  > .bn-block-outer:not([data-prev-type])
  > .bn-block
  > div[data-type="modification"]
  > .bn-block-content[data-content-type="bulletListItem"]::before {
  content: "◦";
}

/* 2 levels of list nesting */
[data-content-type="bulletListItem"]
  ~ .bn-block-group
  [data-content-type="bulletListItem"]
  ~ .bn-block-group
  > .bn-block-outer[data-prev-type="bulletListItem"]
  > .bn-block
  > .bn-block-content::before {
  content: "▪";
}

[data-content-type="bulletListItem"]
  ~ .bn-block-group
  [data-content-type="bulletListItem"]
  ~ .bn-block-group
  > .bn-block-outer:not([data-prev-type])
  > .bn-block
  > .bn-block-content[data-content-type="bulletListItem"]::before,
[data-content-type="bulletListItem"]
  ~ .bn-block-group
  [data-content-type="bulletListItem"]
  ~ .bn-block-group
  > .bn-block-outer:not([data-prev-type])
  > .bn-block
  > div[data-type="modification"]
  > .bn-block-content[data-content-type="bulletListItem"]::before {
  content: "▪";
}

/* CODE BLOCKS */
.bn-block-content[data-content-type="codeBlock"] {
  position: relative;

  background-color: rgb(22 22 22);
  color: white;
  border-radius: 8px;
}
.bn-block-content[data-content-type="codeBlock"] > pre {
  white-space: pre;
  overflow-x: auto;
  margin: 0;
  width: 100%;
  tab-size: 2;

  padding: 24px;
}
.bn-block-content[data-content-type="codeBlock"] > div {
  outline: none !important;
}
.bn-block-content[data-content-type="codeBlock"] > div > select {
  outline: none !important;
  appearance: none;
  user-select: none;
  border: none;
  cursor: pointer;
  background-color: transparent;

  position: absolute;
  top: 8px;
  left: 18px;

  font-size: 0.8em;
  color: white;

  opacity: 0;
  transition: opacity 0.3s;
  transition-delay: 1s;
}
.bn-block-content[data-content-type="codeBlock"] > div > select > option {
  color: black;
}
.bn-block-content[data-content-type="codeBlock"]:hover > div > select,
.bn-block-content[data-content-type="codeBlock"] > div > select:focus {
  opacity: 0.5;
  transition-delay: 0.1s;
}

/* PAGE BREAK */
.bn-block-content[data-content-type="pageBreak"] > div {
  width: 100%;
  height: 0;
  border-top: dotted rgb(125, 121, 122) 2px;
  margin-block: 11px;
}

@media print {
  .bn-block-content[data-content-type="pageBreak"] > div {
    page-break-after: always;
  }
}

/* FILES */

/* Element that wraps content for all file blocks */
[data-file-block] .bn-file-block-content-wrapper {
  cursor: pointer;
  display: flex;
  flex-direction: column;
  user-select: none;
}

/* Add block button & default element (name with icon) */
[data-file-block] .bn-file-block-content-wrapper:has(.bn-add-file-button),
[data-file-block] .bn-file-block-content-wrapper:has(.bn-file-name-with-icon) {
  width: 100%;
}

[data-file-block] .bn-add-file-button {
  align-items: center;
  background-color: rgb(242, 241, 238);
  border-radius: 4px;
  color: rgb(125, 121, 122);
  display: flex;
  gap: 10px;
  padding: 12px;
}

.bn-editor[contenteditable="true"] [data-file-block] .bn-add-file-button:hover,
[data-file-block] .bn-file-name-with-icon:hover,
.ProseMirror-selectednode .bn-file-name-with-icon {
  background-color: rgb(225, 225, 225);
}

[data-file-block] .bn-add-file-button-icon,
[data-file-block] .bn-file-icon {
  width: 24px;
  height: 24px;
}

[data-file-block] .bn-add-file-button-text {
  font-size: 0.9rem;
}
/* ... */

